k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmu-api-strategic
  labels:
    app: rmu-api-strategic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rmu-api-strategic
  template:
    metadata:
      labels:
        app: rmu-api-strategic
    spec:
      containers:
      - name: rmu-api-strategic
        image: labcabrera/rmu-api-strategic:latest
        ports:
        - containerPort: 3002
